# slack-to-coding-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
manifests/: slack-app-manifest.yaml
src/slack_to_coding_agent/: __init__.py  __main__.py  backends.py  codex_server.py  config.py  process.py  service.py  slack_app.py
tests/: test_slack_app.py
