[project]
name = "slack-to-coding-agent"
version = "0.1.1"
description = "Slack bot bridge to a local coding-agent backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "slack-bolt>=1.20.0",
]

[project.scripts]
slack-to-coding-agent = "slack_to_coding_agent.__main__:main"
slack-to-coding-agent-codex-server = "slack_to_coding_agent.codex_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["src"]
